Fix code block alignment

--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -28,8 +28,9 @@
 #content li p { @apply inline; }
 
 /* Consistent format for code blocks */
-div.highlighter-rouge { margin-left: -36px }
-.highlighter-rouge .rouge-code { min-width: 720px }
+div.highlighter-rouge { margin-left: -48px; }
+.highlighter-rouge .lineno { min-width: 30px; }
+.highlighter-rouge .rouge-code { min-width: 720px; }
 
 /* Syntax Highlight */
 .highlight { @apply text-base; }
